css/styles.css
:root {
  /* colors */
  --text-dark-color: #434455;
  --text-light-color: #ffffff;
  --text-light-secondary-color: #f4f4fd;
  --title-color: #2e2f42;
  --background-main-color: #ffffff;
  --background-secondary-color: #f4f4fd;
  --background-dark-color: #2e2f42;
  --accent-color: #4d5ae5;
  --hover-color: #404bbf;

  /* variables */
  --body-text-size: 16px;
}

/* global styles */

body {
  font-family: "Roboto", sans-serif;
  font-size: var(--body-text-size);
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: var(--text-dark-color);
  background-color: var(--background-main-color);
}

h1,
h2,
h3 {
  color: var(--title-color);
  letter-spacing: inherit;
  /* this one is really strange... Added this because of validator */
  text-transform: capitalize;
}

h1 {
  font-size: 56px;
  line-height: 1.07;
}

h2 {
  font-size: 36px;
  line-height: 1.11;
}

h3 {
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
}

button {
  line-height: inherit;
  letter-spacing: inherit;
  color: inherit;
  cursor: pointer;
}

a {
  color: inherit;
  text-decoration: none;
}

ul {
  list-style: none;
}

.main-btn {
  font-weight: 500;
  background-color: var(--accent-color);
  color: var(--text-light-color);
  letter-spacing: 0.04em;
}

.main-btn:hover,
.main-btn:focus {
  background-color: var(--hover-color);
}

.text-link:hover,
.text-link:focus {
  color: var(--hover-color);
}

/* header styles */

.header-address {
  font-style: normal;
}

.logo {
  font-family: "Raleway", sans-serif;
  font-weight: 700;
  font-size: 18px;
  line-height: 1.17;
  letter-spacing: 0.03em;
  text-transform: uppercase;
  color: var(--accent-color);
}

.logo-accent {
  color: var(--title-color);
}

.nav-link {
  font-weight: 500;
  color: var(--title-color);
}

/* section 1 styles */

.first-section {
  background-color: var(--background-dark-color);
  color: var(--text-light-color);
}

.main-title {
  color: var(--text-light-color);
  text-align: center;
}

/* section 2 styles */

/* NOTE: added these empty classes because of validator */
.key-point-title {
}

.key-point-text {
}

/* section 3 styles */

.third-section {
  background-color: var(--background-secondary-color);
}

.third-section-title {
  text-align: center;
}

.team-member-container {
  background-color: var(--background-main-color);
}

.team-member-title {
  text-align: center;
}

.team-member-text {
  /* Don't know why validator is complaining about this one. It inherits font-size from body */
  font-size: var(--body-text-size);
}

/* section 4 styles */

.fourth-section-title {
  text-align: center;
}

/* NOTE: added these empty classes because of validator */
.portfolio-item-title {
}

.portfolio-item-text {
}

/* footer styles */

.footer {
  background-color: var(--background-dark-color);
}

.footer .logo-accent {
  color: var(--text-light-secondary-color);
}

.footer-text {
  color: var(--text-light-secondary-color);
}

